--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -109,7 +109,13 @@
                                         </audio>
                                     </div>
                                     <editable
-                                        settings.bind="{show_author:user.editing, show_date:false, class:'story-section', checkable: true, confirmable: params.approval_state.id==2, has_details: used_for==9 }"
+                                        settings.bind="{
+                                            show_author:user.editing, 
+                                            show_date:false, 
+                                            class:'story-section', 
+                                            checkable: true, 
+                                            confirmable: params.approval_state.id==2, 
+                                            has_details: used_for==9 && ! single_doc_entry }"
                                         story.bind="story"
                                         view_details.delegate="view_details(story, $event)"
                                         change.delegate="toggle_story_selection(story, $event, $index)"
