--- a/src/members/members.html
+++ b/src/members/members.html
@@ -77,7 +77,7 @@
                             style="height:36px;margin-top:16px;font-size:small;border:1px solid lightgray;">
                             ${'articles.articles' & t}
                         </button>
-                        <div if.bind="theme.is_desktop && user.advanced_user" style="float:left;padding-top:10px;margin-right:20px;">
+                        <div if.bind="theme.is_desktop" style="float:left;padding-top:10px;margin-right:20px;">
                             <span style="font-size: 150%;color:gray;">${agent.size}</span>
                         </div>
                     </div>
