--- a/src/resources/elements/multi-select/multi-select.html
+++ b/src/resources/elements/multi-select/multi-select.html
@@ -1,6 +1,8 @@
 <template class="multi-select" dir="${theme.rtltr}">
     <div class="input-group search-filter" if.bind="options.length > 0 || first_time">
-        <search-input value.bind="filter" placeholder.bind="place_holder_text" height="32"
+        <search-input 
+            value.bind="filter" placeholder.bind="place_holder_text" height="32"
+            in_focus.bind="in_focus"
             help_topic.bind="settings.help_topic" filter-change.delegate="enter_word($event)"></search-input>
     </div>
     <button if.bind="can_add" class="btn btn-success btn-sm cl-create-btn"
@@ -50,7 +52,7 @@
 
         <!-- unselected options -->
         <div class="row options unselected ${theme.rtltr}" css="max-height:${option_list_height}px;min-height:132px;"
-            if.bind="options && options.length > 0 && (filter.length > 0 || (! settings.show_only_if_filter)) ">
+            if.bind="options && options.length > 0 && (filter.length > 0 || (! settings.show_only_if_filter) || in_focus) ">
             <ul css="width:${width}px;" if.bind="true || unselected_options===[]">
                 <li if.bind="can_show_untagged" class="${to_show_untagged ? 'active' : 'ready'} untag-button"
                     style="cursor:pointer"
@@ -67,7 +69,7 @@
                             class="fa fa-play fa-xs fa-rotate-90"></i>
                         <i if.bind="option.topic_kind==1 && option.expanded" click.delegate="collapse(option)"
                             class="fa fa-play fa-xs fa-rotate-180"></i>
-                        <a click.delegate="select_option(option)"
+                        <a click.trigger="select_option(option)"
                             class.bind="'option-kind-' + option.topic_kind">${option.name}</a>
                     </div>
                 </li>
