--- a/src/resources/elements/search-input.html
+++ b/src/resources/elements/search-input.html
@@ -6,7 +6,10 @@
             <help topic.bind="help_topic" class="search" position="bottom" style="padding-right:2px;"></help>
         </div>
         <input type="search" value.bind="value" t="[placeholder]${placeholder}"
-            keydown.delegate="input_changed($event) & debounce: 3000">
+            keydown.delegate="input_changed($event) & debounce: 3000"
+            focus.trigger="is_in_focus(true)"
+            blur.trigger="is_in_focus(false)"
+            id="search-input">
         <i class="far fa-times fa-sm remove" if.bind="value" click.trigger="clear_text()" css="top:${(height-14)/2}px;"></i>
     </div>
 </template>
