--- a/src/resources/elements/multi-select/multi-select.html
+++ b/src/resources/elements/multi-select/multi-select.html
@@ -51,8 +51,9 @@
         </div>
 
         <!-- unselected options -->
-        <div class="row options unselected ${theme.rtltr}" css="max-height:${option_list_height}px;min-height:132px;"
-            if.bind="options && options.length > 0 && (filter.length > 0 || (! settings.show_only_if_filter) || in_focus) ">
+        <div class="row options unselected ${theme.rtltr}" 
+            css="max-height:${option_list_height}px;min-height:132px;"
+            if.bind="to_expand_options">
             <ul css="width:${width}px;" if.bind="true || unselected_options===[]">
                 <li if.bind="can_show_untagged" class="${to_show_untagged ? 'active' : 'ready'} untag-button"
                     style="cursor:pointer"
