--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -28,14 +28,14 @@
                                 <ul class="family">
                                     <li>
                                         <a type="button" class="btn btn-default ${disabled_if}" if.bind="member.family_connections.parents && member.family_connections.parents.pa"
-                                            route-href="route: member-details; params.bind: {id:member.family_connections.parents.pa.id, keywords: ''}" style="float:right;">
+                                            load="/member-details/${member.family_connections.parents.pa.id}" style="float:right;">
                                             <img src.bind="get_profile_photo(member.family_connections.parents.pa)" />
                                             <span>
                                                 ${member.family_connections.parents.pa.name}
                                             </span>
                                         </a>
                                         <a type="button" class="btn btn-default ${disabled_if}" if.bind="member.family_connections.parents && member.family_connections.parents.ma"
-                                            route-href="route: member-details; params.bind: {id:member.family_connections.parents.ma.id, keywords: ''}" style="float:right;">
+                                            load="/member-details/${member.family_connections.parents.ma.id}" style="float:right;">
                                             <img src.bind="get_profile_photo(member.family_connections.parents.ma)" />
                                             <span>
                                                 ${member.family_connections.parents.ma.name}
@@ -51,8 +51,8 @@
                                 <ul class="family">
                                     <li>
                                         <a type="button" class="btn btn-default ${disabled_if}"
-                                            repeat.for="sibling of member.family_connections.siblings" 
-                                                route-href="route: member-details; params.bind: {id:sibling.id, keywords: ''}">
+                                            repeat.for="sibling of member.family_connections.siblings"
+                                            load="/member-details/${sibling.id}">
                                             <img src.bind="get_profile_photo(sibling)" />
                                             <span>
                                                 ${sibling.name}
@@ -67,8 +67,8 @@
                             <div>
                                 <ul class="family">
                                     <li>
-                                        <a type="button" class="btn btn-default ${disabled_if}" repeat.for="spouse of member.family_connections.spouses" 
-                                            route-href="route: member-details; params.bind: {id:spouse.id, keywords: ''}">
+                                        <a type="button" class="btn btn-default ${disabled_if}" repeat.for="spouse of member.family_connections.spouses"
+                                            load="/member-details/${spouse.id}">
                                             <img src.bind="get_profile_photo(spouse)" />
                                             <span>
                                                 ${spouse.name}
@@ -84,7 +84,7 @@
                                 <ul class="family">
                                     <li>
                                         <a type="button" class="btn btn-default ${disabled_if}" repeat.for="child of member.family_connections.children" 
-                                            route-href="route: member-details; params.bind: {id:child.id, keywords: ''}">
+                                            load="/member-details/${child.id}">
                                             <img src.bind="get_profile_photo(child)" />
                                             <span>
                                                 ${child.name}
