--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -23,7 +23,7 @@
                             <help topic="photos.can-create-group" , position="bottom"></help>
                         </div>
                         <div class="form-group" if.bind="user.editing && checked_stories.size == 0">
-                            <a route-href="route: story-detail; params.bind: {id:'new', used_for: api.constants.story_type.STORY4EVENT}"
+                            <a load="route: story-detail; params.bind: {id:'new', used_for: api.constants.story_type.STORY4EVENT}"
                                 class="btn btn-success cl-create-btn">
                                 <i class="far fa-plus-square"></i>
                                 ${'stories.new' & t}
