--- a/src/home/home.html
+++ b/src/home/home.html
@@ -71,7 +71,7 @@
                         ${video.name}
                     </span>
                     <img src.bind="video.src"
-                         width="220"
+                         width="video_width"
                          title.bind="video.name"
                          style="margin-bottom:10px;"/>
                 </div>
