fix(app): numerous fixes for v2 porting

--- a/src/my-app.html
+++ b/src/my-app.html
@@ -1,5 +1,5 @@
 <template data-analytics-category data-analytics-action data-analytics-label data-analytics-value class="unselectable">
-    <import from="styles.css"></import>
+    <import from="./styles.scss"></import>
     <import from="toastr/build/toastr.min.css"></import>
 
     <div class="page-container ${theme.palette}"
