--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -13,7 +13,7 @@
     </help>
 
     <div class="btn-group dropdown border-right"
-        aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)" if.bind="theme.width>458">
+        aubs-dropdown="auto-close.bind: autoClose; on-toggle.bind: state => toggled(state)" if.bind="theme.width>458">
         <button class="btn btn-link dropdown-toggle" style="padding: 0;" aubs-dropdown-toggle
             t="[title]user.personalize">
             <i class="fas fa-user-cog"></i>
@@ -22,7 +22,7 @@
         <ul class="dropdown-menu dropdown-menu-left" disabled.bind="isChangingLocale">
             <li style="border-bottom:solid 1px gray;width:170px;margin-bottom:8px;padding-top:6px;">
                 <div class="btn-group dropdown border-right" style="padding:0;margin-right:18px;"
-                    aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)">
+                    aubs-dropdown="auto-close.bind: autoClose; on-toggle.bind: state => toggled(state)">
                     <button class="btn btn-link btn-md dropdown-toggle"
                         style="text-decoration:none;position:relative;margin-bottom:10px;" aubs-dropdown-toggle>
                         <span style="position:absolute;left:20px;top:-8px;" class="font-size-150">${'a' & t}</span>
@@ -40,7 +40,7 @@
             </li>
             <li style="border-bottom:solid 1px gray;width:170px;padding-bottom:5px;">
                 <div class="btn-group dropdown border-right"
-                    aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)"
+                    aubs-dropdown="auto-close.bind: autoClose; on-toggle.bind: state => toggled(state)"
                     if.bind="theme.width>458">
                     <button class="btn btn-link dropdown-toggle" style="padding: 0;" aubs-dropdown-toggle>
                         <i class="far fa-lg fa-globe" style="margin-left:10px;"></i>
@@ -57,7 +57,7 @@
             </li>
             <li style="border-bottom:solid 1px gray;width:170px;padding-bottom:5px;height:32px;padding-top:3px;">
                 <div class="btn-group dropdown border-right"
-                    aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)"
+                    aubs-dropdown="auto-close.bind: autoClose; on-toggle.bind: state => toggled(state)"
                     if.bind="theme.width>458">
                     <button class="btn btn-link dropdown-toggle" style="padding: 0;" aubs-dropdown-toggle>
                         <i class="far fa-lg fa-glasses-alt" style="margin-left:10px;"></i>
@@ -74,7 +74,7 @@
             </li>
             <li style="width:170px;padding-bottom:4px;padding-top:6px;">
                 <div class="btn-group dropdown border-right"
-                    aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)">
+                    aubs-dropdown="auto-close.bind: autoClose; on-toggle.bind: state => toggled(state)">
                     <button class="btn btn-link dropdown-toggle" style="padding: 0;" aubs-dropdown-toggle>
                         <i class="far fa-tint" style="margin-left:12px;"></i>
                         <span style="position:absolute; left:40px;top:0px;">${'user.select-colors' & t}</span>
@@ -100,7 +100,7 @@
     </div>
 
     <div class="btn-group dropdown border-right"
-        aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: share_toggled(); is-open.bind: share_menu_open" if.bind="theme.width>458" >
+        aubs-dropdown="auto-close.bind: autoClose; on-toggle.bind: () => share_toggled(); is-open.bind: share_menu_open" if.bind="theme.width>458" >
         <button class="btn btn-link dropdown-toggle" style="padding: 0;" aubs-dropdown-toggle title="${'user.sharing.sharing' & t}">
             <i class="fas fa-share-alt"></i>
             <span class="caret"></span>
@@ -155,7 +155,7 @@
         <i class="fas fa-comments"></i>
     </a>
 
-    <div class="btn-group dropdown" aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)"
+    <div class="btn-group dropdown" aubs-dropdown="auto-close.bind: autoClose; on-toggle.bind: state => toggled(state)"
         if.bind="user.debugging || user.privileges.HELP_AUTHOR ||user.privileges.ADMIN || user.privileges.DEVELOPER || user.privileges.ACCESS_MANAGER">
         <button class="btn btn-link dropdown-toggle" style="padding: 0;" aubs-dropdown-toggle>
             <i class="fas fa-cog"></i>
