--- a/src/members/member-edit.html
+++ b/src/members/member-edit.html
@@ -125,7 +125,7 @@
         <form class="form-horizontal member-info" role="form">
             <!--The left wing of the form-->
             <div class="col-md-6 member-info-left">
-                <div class="form-group" if.bind="member.member_info.Name">
+                <div class="form-group" if.bind="member.member_info.name">
                     <input type="text" class="form-control" id="former_name" t="[placeholder]members.former-name" value.bind="member.member_info.FormerName"
                         disabled.bind="true">
                 </div>
@@ -164,8 +164,8 @@
             </div>
             <!--The right wing of the form-->
             <div class="col-md-6 member-info-right">
-                <div class="form-group" if.bind="member.member_info.Name">
-                    <input type="text" class="form-control" id="member_name" t="[placeholder]members.member-name" value.bind="member.member_info.Name"
+                <div class="form-group" if.bind="member.member_info.name">
+                    <input type="text" class="form-control" id="member_name" t="[placeholder]members.member-name" value.bind="member.member_info.name"
                         disabled.bind="true">
                 </div>
                 <div class="form-group ${member.member_info.first_name ? '' : 'mandatory-missing'}">
