--- a/src/terms/terms.html
+++ b/src/terms/terms.html
@@ -65,7 +65,7 @@
                                             settings.bind="{show_author:true, show_date:false, class:'story-section', no_expand: true, checkable: true}"
                                             story.bind="term.story"
                                             change.delegate="toggle_selection(term, $event, $index)"
-                                            info_title.bind="term.Name" info_content.bind="term.keywords"
+                                            info_title.bind="term.name" info_content.bind="term.keywords"
                                             class="story-body">
                                         </editable>
                                     </div>
