--- a/src/admin/hit-counts.html
+++ b/src/admin/hit-counts.html
@@ -4,7 +4,7 @@
         <div css="direction:${theme.rtltr1}">
             <span class="boom">Total Hits Count: ${total_count}</span>
         </div>
-        <form class="form-inline" style="padding-top:16px;direction:rtl1;">
+        <!-- <form class="form-inline" style="padding-top:16px;direction:rtl1;">
             <div class="input-group" style="padding-top:16px;">
                 <select value.bind="what_option" style="height:38px;border-top:solid 2px gray;border-left:solid 2px gray" dir="rtl" change.delegate="change_what($event)">
                     <option dir="rtl" repeat.for="option of what_options" model.bind="option.value">${option.name}</option>
@@ -14,10 +14,10 @@
                 </select>
 
             </div>
-        </form>
+        </form> -->
     </section>
     <section class="container content-area" style="padding-right:30px;" dir="ltr">
-        <div style="width: 740px;margin-right:auto;margin-left:auto;height:600px;overflow:auto;">
+        <!-- <div style="width: 740px;margin-right:auto;margin-left:auto;height:600px;overflow:auto;">
             <table class="table table-striped" aurelia-table="data.bind: items; display-data.bind: $displayData;
                 current-page.bind: currentPage; page-size.bind: pageSize; total-items.bind: totalItems;">
                 <thead>
@@ -49,14 +49,14 @@
                     <div class="form-group pull-right">
                         <label for="pageSize">Page Size: </label>
                         <select value.bind="pageSize" id="pageSize" class="form-control">
-                                <option model.bind="5">5</option>
-                                <option model.bind="10">10</option>
-                                <option model.bind="15">15</option>
-                                <option model.bind="50">50</option>
-                            </select>
+                            <option model.bind="5">5</option>
+                            <option model.bind="10">10</option>
+                            <option model.bind="15">15</option>
+                            <option model.bind="50">50</option>
+                        </select>
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </section>
 </template>
