--- a/src/admin/hit-counts-new.html
+++ b/src/admin/hit-counts-new.html
@@ -5,53 +5,74 @@
         style="padding-right: 30px"
         dir="ltr"
     >
-        <form class="form-inline" style="padding-top: 16px; direction: rtl1">
-            <div class="input-group" style="padding-top: 16px">
-                <select
-                    value.bind="curr_what"
-                    style="
-                        height: 46px;
-                        border-top: solid 2px gray;
-                        border-left: solid 2px gray;
-                        margin-right: 30px;
-                    "
-                    dir="rtl"
-                    change.trigger="change_what($event)"
-                >
-                    <option
+        <div>
+            <h2
+                style="
+                    margin-top: 20px;
+                    margin-left: auto;
+                    margin-right: auto;
+                    width: 400px;
+                "
+            >
+                ${'hits.hit-list' & t}
+            </h2>
+        </div>
+        <div style="margin-left: auto; margin-right: auto">
+            <form
+                class="form-inline"
+                style="padding-top: 16px;margin-left:auto;margin-right:auto;width:900px;"
+            >
+                <div class="input-group" style="padding-top: 16px;display:flex;justify-content: center;">
+                    <select
+                        value.bind="curr_what"
+                        style="
+                            height: 46px;
+                            border-top: solid 2px gray;
+                            border-left: solid 2px gray;
+                            margin-right: 30px;
+                        "
                         dir="rtl"
-                        repeat.for="option of what_options"
-                        model.bind="option.value"
+                        change.trigger="change_what($event)"
                     >
-                        ${option.name} ${option.value}
-                    </option>
-                </select>
-                <button
-                    repeat.for="period of periods"
-                    class="btn btn-lg btn-${period==curr_period ? 'primary' : 'default'}"
-                    click.delegate="detailed_of_periods(period)"
-                    style="margin-right:12px";
-                >
-                    ${period_name(period)}: ${curr_totals[period]}
-                </button>
-            </div>
-        </form>
+                        <option
+                            dir="rtl"
+                            repeat.for="option of what_options"
+                            model.bind="option.value"
+                        >
+                            ${option.name}
+                        </option>
+                    </select>
+                    <button
+                        repeat.for="period of periods"
+                        class="btn btn-lg btn-${period==curr_period ? 'primary' : 'default'}"
+                        click.delegate="detailed_of_periods(period)"
+                        style="margin-right: 12px"
+                        disabled="${curr_totals[period] ? '' : 'disabled'}"
+                        ;
+                    >
+                        ${period_name(period)}: ${curr_totals[period]}
+                    </button>
+                </div>
+            </form>
+        </div>
     </section>
     <section
         class="container content-area"
         style="padding-right: 30px"
         dir="ltr"
+        if.bind="curr_what != 'APP'"
     >
         <div
             style="
                 width: 740px;
-                margin-right: auto;
-                margin-left: auto;
                 height: 600px;
                 overflow: auto;
+                margin-top: 40px;
+                margin-left: auto;
+                margin-right: auto;
             "
         >
-            <!-- <table
+            <table
                 class="table table-striped"
                 aurelia-table="data.bind: items; display-data.bind: $displayData;
                 current-page.bind: currentPage; page-size.bind: pageSize; total-items.bind: totalItems;"
@@ -70,7 +91,7 @@
                         <td>${item.count}</td>
                     </tr>
                 </tbody>
-            </table> -->
+            </table>
         </div>
         <div class="row" style="margin-right: 0">
             <div class="col-md-9">
