--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -94,14 +94,14 @@
                     <ul ref="scroll_area" class="story-list unselectable ${no_results ? 'empty-stories' : ''}"
                         style="margin-top:12px;">
                         <li repeat.for="story of story_list | filter: filter : '*selected' : 'name' : 'author' | take : 9999"
-                            dir="${theme.rtltr}" if.bind="story.used_for==used_for"
-                            style="float:right;border-bottom:2px solid lightgray;padding-bottom:20px;position:relative;width:100%;margin-bottom:16px;">
+                            dir="${theme.rtltr}" 
+                            if.bind="story.used_for==used_for">
                             <div class="outer-story-preview" click.delegate="jump_to_the_full_story($event, story)">
-                                <!--<div style="margin-bottom: 10px;" aubs-tooltip="text.bind:story.topics">-->
                                 <div class="story-preview" style="margin-bottom: 10px;" if.bind="used_for!=18">
                                     <div>
                                         <img if.bind="used_for==3" src.bind="story.photo_src" width="140" />
                                         <img if.bind="used_for==9" src.bind="story.doc_jpg_url" width="140" />
+                                        <img if.bind="used_for==14" src.bind="story.doc_jpg_url" width="140" />
                                         <img if.bind="used_for==1" src.bind="story.profile_photo_path" width="120" style="border-radius: 50%;" />
                                         <img if.bind="used_for==8" src.bind="thumbnail(story.video_src)" width="140"/>
                                         <audio controls if.bind="used_for==10">
