--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -161,7 +161,7 @@
     </div>
 
 
-    <a if.bind="user.debugging || user.privileges.EDITOR" href click.trigger="toggle_edit_mode()"
+    <a if.bind="user.enable_editing && (user.debugging || user.privileges.EDITOR)" href click.trigger="toggle_edit_mode()"
         title="${user.editing ? 'user.no-edit' : 'user.can-edit' & t}"
         class="border-right ${user.editing ? 'highlight' : ''}" style="border-left:1px solid gray;padding-left:10px;">
         <i class="fas ${user.editing ? 'fa-eye highlight' : 'fa-pencil' }"></i>
