--- a/src/members/members.html
+++ b/src/members/members.html
@@ -89,7 +89,10 @@
                 <ul class="list-group" style="display:flex;flex-wrap:wrap;padding:0;">
                     <li repeat.for="member of members | filter : filter : '*selected' : 'first_name' : 'last_name' : 'former_first_name' : 'former_last_name' : 'nick_name' | filterBySet : qualified_members : 'include' : 'id' | take : max_members_displayed | filtervisibility : 0 | spy : agent"
                         if.bind="! user.privileges.DATA_AUDITOR || ! only_unapproved || ! member.approved"
-                        class="list-group-item ${member.id === $parent.selectedId ? 'active' : ''} ${not_ready(member) ? 'not_ready' : ''} ${member.selected}"
+                        class="list-group-item ${member.id === $parent.selectedId ? 'active' : ''} 
+                            ${not_ready(member) ? 'not_ready' : ''} 
+                            ${member.selected} 
+                            ${member.odd_level}"
                         css="width:${photo_size+20};height:${photo-size+22};"
                         dir="rtl">
                         <a click.delegate="member_clicked(member, $event, $index)" tapandhold="500"
